--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       background-repeat: no-repeat;
       background-size: cover;
     }
+     @media (max-width: 768px) {
+  .title {
+    font-size: 1.8rem;
+  }
+  textarea {
+    width: 100%;
+    font-size: 1rem;
+  }
+}
   </style>
   <body>
     <div id="root"></div>
